[package]
name = "tui-image"
description = "An image viewer widget for tui-rs"
homepage = "https://github.com/arraypad/tui-image"
repository = "https://github.com/arraypad/tui-image"
version = "0.1.0"
authors = ["Arpad Ray <arraypad@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["terminal", "image", "tui", "widget"]

[dependencies]
tui = "0.16.0"
failure = "0.1.6"
image = "*"

[dev-dependencies]
failure = "0.1.6"
termion = "1.5"
